Added tell_friend widget

--- a/app/views/shared/_data-loader.html.erb
+++ b/app/views/shared/_data-loader.html.erb
@@ -126,6 +126,13 @@ bdata = [
     helpText: "This widget allows your customers to request you to call them back.",
     singleton: true
   },
+
+  {
+    name: "tell-a-friend",
+    wtype: 'tell_friend',
+    helpText: "This widget allows your customers to instantly email their friends about your mobile website.",
+    singleton: true
+  },
   
   {
     name: "operation-hours",
