--- a/app/views/layouts/application.slim
+++ b/app/views/layouts/application.slim
@@ -27,5 +27,6 @@ html
           = yield
         .clearfix
     
+    = javascript_include_tag 'support/underscore'
     = javascript_include_tag 'http://code.jquery.com/jquery-1.5.1.js'
     = javascript_include_tag 'notice'
