--- a/public/stylesheets/sass/signup.sass
+++ b/public/stylesheets/sass/signup.sass
@@ -158,3 +158,7 @@
       width: 200px
   a.skip-link
     padding: 3px 6px 0 0
+  td.logo-preview
+    width: 125px
+    height: 100px
+    text-align: center
