Added loading indicator for logo uploading

--- a/app/views/layouts/application.slim
+++ b/app/views/layouts/application.slim
@@ -30,3 +30,4 @@ html
     = javascript_include_tag 'support/underscore'
     = javascript_include_tag 'http://code.jquery.com/jquery-1.5.1.js'
     = javascript_include_tag 'notice'
+    = yield :js
