Changed category button labels

--- a/app/views/shared/_templates.slim
+++ b/app/views/shared/_templates.slim
@@ -484,8 +484,8 @@
     br
     input type="button" name="add_cat" value="Add Sub-Category"
     | <%       if (!emptyCats) { %>
-    input type="button" name="edit_cat" value="Edit"
-    input type="button" name="rem_cat" value="Remove Sub-Category"
+    input type="button" name="edit_cat" value="Edit Name"
+    input type="button" name="rem_cat" value="Delete"
     | <%       } if (cats.length >= 2) { %>
     br
     input type="button" name="up_cat" data-mod="-1" value="Move Up"
@@ -504,7 +504,7 @@
     input type="button" name="add_item" value="Add Item"
     | <%       if (!emptyItems) { %>
     input type="button" name="edit_item" value="Edit Item"
-    input type="button" name="rem_item" value="Remove Item"
+    input type="button" name="rem_item" value="Delete"
     | <%       } if (items.length >= 2) { %>
     br
     input type="button" name="up_item" data-mod="-1" value="Move Up"
@@ -532,8 +532,8 @@
     br
     input type="button" name="add_cat" value="Add Sub-Category"
     | <%       if (!emptyCats) { %>
-    input type="button" name="edit_cat" value="Edit"
-    input type="button" name="rem_cat" value="Remove Sub-Category"
+    input type="button" name="edit_cat" value="Edit Name"
+    input type="button" name="rem_cat" value="Delete"
     | <%       } if (cats.length >= 2) { %>
     br
     input type="button" name="up_cat" data-mod="-1" value="Move Up"
@@ -553,7 +553,7 @@
     input type="button" name="add_item" value="Add Page"
     | <%       if (!emptyItems) { %>
     input type="button" name="edit_item" value="Edit Page Name"
-    input type="button" name="rem_item" value="Remove Page"
+    input type="button" name="rem_item" value="Delete"
     | <%       } if (items.length >= 2) { %>
     br
     input type="button" name="up_item" data-mod="-1" value="Move Up"
