Changed some default widget names

--- a/app/views/shared/_data-loader.html.erb
+++ b/app/views/shared/_data-loader.html.erb
@@ -135,7 +135,7 @@ bdata = [
   },
   
   {
-    name: "operation-hours",
+    name: "business-hours",
     wtype: 'hours',
     helpText: "Let your customers know when you're open for business."
   },
@@ -159,7 +159,7 @@ bdata = [
   },
   
   {
-    name: "restaurant-menu",
+    name: "menu",
     wtype: 'category',
     helpText: "Give your customers instant access to your restaurant's cuisine.",
     singleton: true
