--- a/public/stylesheets/sass/builder.sass
+++ b/public/stylesheets/sass/builder.sass
@@ -8,7 +8,7 @@
   ul
     list-style: none
     padding-left: 0
-    margin-top: 54px
+    margin: 54px 0 10px 0
   .spacer
     border-top: 1px solid #ddd
     margin: 5px 0
@@ -42,6 +42,7 @@
 
 #sidebar .widgets
   height: 414px
+  padding-left: 23px
   overflow: auto
   .home-icon
     height: 105px
