Refactored couch host urls. Switched to different couch.

--- a/app/views/shared/_data-loader.html.erb
+++ b/app/views/shared/_data-loader.html.erb
@@ -4,7 +4,7 @@
 window.g = {
   width: 320,
   height: 480,
-  couchLocation: 'http://yomobi.couchone.com',
+  couchLocation: '<%= @company.couch_host %>',
   db_name: '<%= @company.db_name %>',
   company: "<%= @company.name %>",
   MAX_CHARS: <%= @max_chars || -1 %>
