--- a/app/views/shared/_mobile-data-loader.html.erb
+++ b/app/views/shared/_mobile-data-loader.html.erb
@@ -4,9 +4,7 @@
 window.g = {
   width: 320,
   height: 480,
-  couchLocation: 'http://yomobi.couchone.com',
-
-  // TODO: grab correct values for this stuff
+  couchLocation: '<%= @company.couch_host %>',
   db_name: '<%= @company.db_name %>',
   company: '<%= @company.name %>'
 };
