Added captcha capability to mobile sites. Added captcha to informed widget.

--- a/app/views/layouts/mobile.slim
+++ b/app/views/layouts/mobile.slim
@@ -42,4 +42,5 @@ html
         });
       });
     
+    = javascript_include_tag "http://www.google.com/recaptcha/api/js/recaptcha_ajax.js"
     = javascript_include_tag 'support/showdown.js'
