--- a/app/views/shared/_templates.slim
+++ b/app/views/shared/_templates.slim
@@ -273,6 +273,7 @@
         = select_tag 'carrier', options_for_select(carrier_names)
         br
         | <% } %>
+        #recaptcha-container
         span.response
         br
         input(type="submit" value="Send")
