Changed event calendar to normal link widget

--- a/app/views/shared/_data-loader.html.erb
+++ b/app/views/shared/_data-loader.html.erb
@@ -154,8 +154,9 @@ bdata = [
   
   {
     name: "event-calendar",
-    wtype: 'calendar',
-    helpText: "Keep your customers up-to-date on your business's events."
+    wtype: 'link',
+    helpText: "Keep your customers up-to-date on your business's events.",
+    singleton: true
   },
   
   {
