--- a/app/views/shared/_templates.slim
+++ b/app/views/shared/_templates.slim
@@ -348,10 +348,14 @@
   / =====================
   / = Widget Edit Pages =
   / =====================
-  script.link-edit-area.news-edit-area.blog-edit-area.photo-bucket-edit-area(type="text/template")
+  script.full-website-edit-area.link-edit-area.news-edit-area.blog-edit-area.photo-bucket-edit-area(type="text/template")
     label Enter your website's address [e.g. www.mysite.com]*:
     input(name="url" type="text" value="{{ _maybe.url }}")
   
+  script.event-calendar-edit-area
+    label Enter your website's address [e.g. www.mysite.com]*:
+    textarea name="url" type="text" rows="5" cols="30" {{ _maybe.url }}
+
   script.facebook-edit-area.twitter-edit-area.picasa-edit-area.flickr-edit-area(type="text/template")
     h3 Current Link
     p
