--- a/app/views/shared/_data-loader.html.erb
+++ b/app/views/shared/_data-loader.html.erb
@@ -179,6 +179,13 @@ bdata = [
     helpText: "Give your customers instant access to your list of products.",
     singleton: true
   },
+
+  {
+    name: "home-listings",
+    wtype: 'category',
+    helpText: "Give your customers instant access to your real estate listings.",
+    singleton: true
+  },
   
   {
     name: "category",
