--- a/public/stylesheets/sass/mobile.sass
+++ b/public/stylesheets/sass/mobile.sass
@@ -145,6 +145,9 @@ body
   .item
     padding: 8px 0 8px 12px
     font-size: 18px
+    img
+      max-height: 290px
+      max-width: 290px
   .item.category, .item.leaf-name
     cursor: pointer
   .c0
