--- a/app/views/shared/_data-loader.html.erb
+++ b/app/views/shared/_data-loader.html.erb
@@ -186,6 +186,13 @@ bdata = [
     helpText: "Give your customers instant access to your real estate listings.",
     singleton: true
   },
+
+  {
+    name: "locations",
+    wtype: 'category',
+    helpText: "Give your customers instant access to your business's multiple locations.",
+    singleton: true
+  },
   
   {
     name: "category",
