--- a/app/views/shared/_templates.slim
+++ b/app/views/shared/_templates.slim
@@ -472,7 +472,7 @@
     label Paste your "Embed this Calendar" link here:
     textarea(name="paste" type="text") {{ _maybe.description }}
   
-  script.menu-edit-area.services-edit-area.products-edit-area.home-listings-edit-area(type="text/template")
+  script.menu-edit-area.services-edit-area.products-edit-area.home-listings-edit-area.locations-edit-area(type="text/template")
     | <% if (onHomePage === true) { %>
 
     p This is the {{ prettyName }} widget. You can add subcategories and items.
