Separated email/text opt-ins for informed widget

--- a/app/views/widgets/informed/opt_out.slim
+++ b/app/views/widgets/informed/opt_out.slim
@@ -1,9 +1,14 @@
-p
-  | You have chosen not to receive any text/email notifications from 
-  = @company_name
-  | .
-p
-  | If you have decided to subscribe again, please 
-  a href=@opt_in_url follow this link
-  |  and input your information once again.
+- if @company_name.nil?
+  p You have been opted out of receiving text/email.
+- else
+  p
+    | You have chosen not to receive any 
+    = @opt_out_type
+    |  notifications from 
+    = @company_name
+    | .
+  p
+    | If you have decided to subscribe again, please 
+    a href=@opt_in_url follow this link
+    |  and input your information once again.
   
