Used css line wrap instead of javascript

--- a/public/stylesheets/mobile.css
+++ b/public/stylesheets/mobile.css
@@ -101,7 +101,8 @@ body {
   .home-icon .title {
     width: 64px;
     text-align: center;
-    font-size: 14px; }
+    font-size: 14px;
+    word-wrap: break-word; }
 
 #templates {
   display: none; }
