Added reviews widget

--- a/app/views/shared/_data-loader.html.erb
+++ b/app/views/shared/_data-loader.html.erb
@@ -45,6 +45,13 @@ bdata = [
   },
 
   {
+    name: "reviews",
+    wtype: 'link',
+    helpText: "Add a one-tap link to a website that has reviews of your business.",
+    singleton: true
+  },
+
+  {
     name: "facebook",
     wtype: 'link_fb',
     helpText: "Add a one-tap link to your businesses's Facebook page.",
