--- a/app/views/builder/index.slim
+++ b/app/views/builder/index.slim
@@ -12,20 +12,24 @@
 h1 = @company.name
 #builder-container
   #builder
-    #emulator-wrapper
-      .loader-overlay
-        .icon
-      .drophover-overlay
-        .icon
-        .text Add to Mobile Site
-      #emulator.portrait
-        #mobile-scroller
-          #mobile-container
-            = render 'shared/mobile-render'
-    .widget-editor
-      h1 Click an icon
-      h2 in the Emulator to begin editing
-      h3 OR
-      h1 Drag an icon
-      h2 from the Sidebar to the Emulator
+    .left.lfloat
+      .title Mobile Phone Emulator
+      #emulator-wrapper
+        .loader-overlay
+          .icon
+        .drophover-overlay
+          .icon
+          .text Add to Mobile Site
+        #emulator.portrait
+          #mobile-scroller
+            #mobile-container
+              = render 'shared/mobile-render'
+    .right.lfloat
+      .title Widget Editor
+      .widget-editor
+        h1 Click an icon
+        h2 in the Emulator to begin editing
+        h3 OR
+        h1 Drag an icon
+        h2 from the Sidebar to the Emulator
     .clearfix
