--- a/public/stylesheets/builder.css
+++ b/public/stylesheets/builder.css
@@ -29,6 +29,21 @@
     background-position: 0 -32px; }
   #sidebar .option.active {
     background-color: #d8dfea; }
+  #sidebar .home-icon {
+    width: 150px;
+    height: auto;
+    padding: 5px 0 5px 5px;
+    cursor: pointer; }
+    #sidebar .home-icon .title {
+      width: auto;
+      padding: 4px 0 0 28px;
+      text-align: left; }
+    #sidebar .home-icon .icon {
+      float: left;
+      width: 24px;
+      height: 24px; }
+  #sidebar .home-icon:hover {
+    background: yellow; }
   #sidebar .home-icon.singletonInUse {
     -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=50)";
     filter: alpha(opacity=50);
@@ -38,10 +53,8 @@
 
 #sidebar .widgets {
   height: 414px;
-  padding-left: 23px;
+  padding-left: 20px;
   overflow: auto; }
-  #sidebar .widgets .home-icon {
-    height: 105px; }
 
 #content {
   float: left;
@@ -63,7 +76,22 @@
 #builder-container {
   background: #edeff4;
   border-top: 1px solid #b3b3b3;
-  padding: 20px 10px; }
+  padding: 0 10px 27px 10px; }
+
+#builder .left > .title, #builder .right > .title {
+  padding: 10px 0 54px;
+  font-size: 20px;
+  font-weight: bold;
+  color: #000066; }
+#builder .left {
+  width: 350px;
+  height: 100%; }
+#builder .right {
+  width: 369px;
+  border-left: 1px solid #b3b3b3;
+  height: 100%; }
+  #builder .right .title {
+    padding-left: 10px; }
 
 #builder .widget-editor {
   float: left;
