Changed idle help text to help image

--- a/app/views/builder/index.slim
+++ b/app/views/builder/index.slim
@@ -27,9 +27,5 @@ h1 = @company.name
     .right.lfloat
       .title Widget Editor
       .widget-editor
-        h1 Click an icon
-        h2 in the Emulator to begin editing
-        h3 OR
-        h1 Drag an icon
-        h2 from the Sidebar to the Emulator
+        img src="/images/home-help.png"
     .clearfix
