--- a/app/views/shared/_templates.slim
+++ b/app/views/shared/_templates.slim
@@ -13,11 +13,7 @@
         td.name {{ prettyName }}
   
   script.edit-widget-idle(type="text/template")
-    h1 Click an icon
-    h2 in the Emulator to begin editing
-    h3 OR
-    h1 Drag an icon
-    h2 from the Sidebar to the Emulator
+    img src="/images/home-help.png"
   
   script.edit-widget(type="text/template")
     .header
