--- a/public/stylesheets/sass/mobile.sass
+++ b/public/stylesheets/sass/mobile.sass
@@ -63,6 +63,9 @@ body
     text-align: center
     font-weight: bold
     font-size: 12px
+    div
+      width: ($emulator-width - 8 - 15) / 4
+      word-wrap: break-word
   td:hover
     cursor: pointer
   td.active
