--- a/public/stylesheets/sass/builder.sass
+++ b/public/stylesheets/sass/builder.sass
@@ -152,6 +152,7 @@
   .widget-name
     padding: 0 0 0 72px
     font-size: 2.5em
+    word-wrap: break-word
     .change-label
       display: none
       padding-left: 8px
