--- a/app/views/shared/_templates.slim
+++ b/app/views/shared/_templates.slim
@@ -383,7 +383,7 @@
   
   script.custom_page-edit-area.about-us-edit-area(type="text/template")
     #jeditor-wrapper
-      textarea#jeditor {{ _maybe.content }}
+      textarea#jeditor rows=8 cols=8 {{ _maybe.content }}
 
   script.phone-edit-area(type="text/template")
     label Your company's phone number*:
