--- a/public/stylesheets/jwysiwyg.css
+++ b/public/stylesheets/jwysiwyg.css
@@ -1,4 +1,5 @@
 /* css for jwysiwyg */
 body {
   font-family: "lucida grande", tahoma, verdana, arial, sans-serif;
-  font-size: 16px; }
+  font-size: 1em;
+}
